--- a/HeartOfGold/Views/Item/ItemForm.cshtml
+++ b/HeartOfGold/Views/Item/ItemForm.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
+@*<div class="row">
     <div class="col-md-5 col-sm-5 col-lg-5">
         <ol class="breadcrumb">
             <li>
@@ -27,7 +27,7 @@
             </li>
         </ol>
     </div>
-</div>
+</div>*@
 
 
 
@@ -38,50 +38,65 @@
 </div>
 
 
-<div class="container">
-    <div class="row">
-        <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 col-offset-xs-0">
 
-            @using (Html.BeginForm("Save", "Item", new { id = "inventory" }))
-            {
-                <div class="well well-lg bg-info">
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.Item.Name, new { @class = "bold-text" })
-                        @Html.TextBoxFor(m => m.Item.Name, new { @class = "form-control", @placeholder = "Provide a name for this donation" })
-                        @Html.ValidationMessageFor(m => m.Item.Name)
-                    </div>
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.Item.Description, new { @class = "bold-text" })
-                        @Html.TextBoxFor(m => m.Item.Description, new { @class = "form-control", @placeholder = "Describe the donation briefly" })
-                        @Html.ValidationMessageFor(m => m.Item.Description)
-                    </div>
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.Item.DonorId, new { @class = "bold-text" })
-                        @Html.DropDownListFor(m => m.Item.DonorId, new SelectList(Model.Donors, "Id", "FullName"), "Who was the donor?", new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Item.DonorId)
-                    </div>
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.Item.Quantity, new { @class = "bold-text" })
-                        @Html.TextBoxFor(m => m.Item.Quantity, new { @class = "form-control", @placeholder = "Indicate the quantity involved" })
-                        @Html.ValidationMessageFor(m => m.Item.Quantity)
-                    </div>
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.Item.CategoryId, new { @class = "bold-text" })
-                        @Html.DropDownListFor(m => m.Item.CategoryId, new SelectList(Model.Categories, "Id", "Name"), "What type of donation is it?", new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Item.CategoryId)
-                        <br />
-                    </div>
-                    @Html.HiddenFor(m => m.Item.Id)
-                    @Html.AntiForgeryToken()
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary register-button">Save Donation</button>
-                        @Html.ActionLink("Back to Inventory", "Index", "Item", null, new { @class = "btn btn-default" })
-                        @*@Html.ActionLink("Remove", "Remove", "Item", null, new { @class = "btn btn-default", @id = Model.Item.Id })*@
-                    </div>
-                </div>
-            }
+    <div class="row">
+        <div class="col-lg-5 col-lg-offset-4 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 col-offset-xs-0">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    @using (Html.BeginForm("Save", "Item", new { id = "inventory" }))
+                    {
+                        <div class="col-md-12 col-md-offset-1">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.Item.Name, new { @class = "bold-text", @title = "Enter a name for this donation." })
+                                @Html.TextBoxFor(m => m.Item.Name, new { @class = "form-control", @placeholder = "Provide a name for this donation" })
+                                @Html.ValidationMessageFor(m => m.Item.Name)
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-md-offset-1">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.Item.Description, new { @class = "bold-text", @title = "Enter a brief description of the donation." })
+                                @Html.TextBoxFor(m => m.Item.Description, new { @class = "form-control", @placeholder = "Describe the donation briefly" })
+                                @Html.ValidationMessageFor(m => m.Item.Description)
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-md-offset-1">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.Item.DonorId, new { @class = "bold-text", @title = "Select the donor for this donation." })
+                                @Html.DropDownListFor(m => m.Item.DonorId, new SelectList(Model.Donors, "Id", "FullName"), "Who was the donor?", new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Item.DonorId)
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-md-offset-1">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.Item.Quantity, new { @class = "bold-text", @title = "Provide a quantity of the items in the donation." })
+                                @Html.TextBoxFor(m => m.Item.Quantity, new { @class = "form-control", @placeholder = "Indicate the quantity involved" })
+                                @Html.ValidationMessageFor(m => m.Item.Quantity)
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-md-offset-1">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.Item.CategoryId, new { @class = "bold-text", @title = "Select a type of category for this donation." })
+                                @Html.DropDownListFor(m => m.Item.CategoryId, new SelectList(Model.Categories, "Id", "Name"), "What type of donation is it?", new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.Item.CategoryId)
+                                <br />
+                            </div>
+                            </div>
+
+                            @Html.HiddenFor(m => m.Item.Id)
+                            @Html.AntiForgeryToken()
+                        <div class="col-md-12 center">
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary register-button">Save Donation</button>
+                                @Html.ActionLink("Back to Inventory", "Index", "Item", null, new { @class = "btn btn-default" })
+                                @*@Html.ActionLink("Remove", "Remove", "Item", null, new { @class = "btn btn-default", @id = Model.Item.Id })*@
+                            </div>
+                            </div>
+                            }
+                        </div>
+                    </div>                
+            </div>
         </div>
-    </div>
+
 
     <div class="row">
         <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 col-offset-xs-0">
