--- a/HeartOfGold/Views/Shared/_Layout.cshtml
+++ b/HeartOfGold/Views/Shared/_Layout.cshtml
@@ -29,9 +29,17 @@
             </div>
             <div class="navbar-collapse collapse navbar-fontsize center" style="font-size:1.1em">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Inventory", "Index", "Item")</li>
-                    <li>@Html.ActionLink("Student Requests", "Index", "Request")</li>
-                    <li>@Html.ActionLink("Donors", "Index", "Donors")</li>
+                    @*<li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin Control <span class="caret"></span></a>
+                        @*<ul class="dropdown-menu" role="menu" id="navDropMenu">
+                            <li>@Html.ActionLink("Manage Inventory", "Index", "Item")</li>
+                            <li class="divider"></li>
+                            <li>@Html.ActionLink("Student Requests", "Index", "Request")</li>
+                            <li class="divider"></li>
+                            <li>@Html.ActionLink("Donors", "Index", "Donors")</li>
+                        </ul>*@
+                    @*</li>*@
+                    <li>@Html.ActionLink("Admin Dashboard", "Dashboard", "Home")</li>
                     <li>@Html.ActionLink("Our Mission", "About", "Home")</li>
                     <li>@Html.ActionLink("Need help?", "ViewHelp", "Help")</li>
                     <li>@Html.ActionLink("Reporting", "Index", "Reports")</li>
@@ -48,6 +56,7 @@
         </div>
     </div>
 
+    
 
     @*<div class="footer">
             <ul class="list-inline text-center">
